# mocking-box

./: .gitignore  Dockerfile  README.md  config.example.yaml  go.mod  go.sum
cmd/mirrorsim/: main.go
cmd/mockingbox/: main.go
demo/: config.yaml  corpus.jsonl  docker-compose.yml
demo-legalcare/: README.md  config-selfcheck.yaml  config.yaml  docker-compose.yml  traffic.py
demo-legalcare/app_new/: Dockerfile  app.py
demo-legalcare/app_old/: app.py
demo-legalcare/mysql/: init.sql  my.cnf
demo-pg/: README.md  config.yaml  docker-compose.yml
demo-pg/app_new/: Dockerfile  app.py
demo-pg/app_old/: app.py
demo-pg/pg/: init.sql
demo/app_new/: app.py
demo/app_old/: app.py
demo/corpus/: cap-test.jsonl  golden-demo.golden.jsonl
demo/mysql/: init.sql  my.cnf
deploy/: config.yaml  docker-compose.yml
docs/: mcp.md
internal/agent/: agent.go  daemon.go
internal/binlog/: capture.go
internal/capture/: capture.go
internal/config/: config.go
internal/corpus/: corpus.go
internal/diff/: diff.go  diff_test.go
internal/golden/: golden.go
internal/mcp/: mcp.go  tools.go
internal/pg/: capture.go  copy.go  pg.go
internal/replay/: replay.go  verify.go
internal/seed/: seed.go
internal/sniff/: sniff.go  sniff_test.go  sources.go  sources_test.go
internal/ui/: agents.go  ui.go  (+2 more)
poc/python/: pyproject.toml
poc/python/mockingbox/: __init__.py  binlog.py  cli.py  config.py  corpus.py  diff.py  replay.py  report.py
poc/python/tests/: test_diff.py
research/: 01-differential-testing-tools.md  02-architecture.md  03-deployment-architecture.md
(+3 files in other folders)
